SYNC-303:  Fix project layout to meet current best practices